add bootstrap js with mounts

--- a/config.yml
+++ b/config.yml
@@ -10,3 +10,8 @@ markup:
 
 params:
   tagline: 'Aim for better data storytelling'
+
+module:
+  mounts:
+  - source: node_modules/bootstrap/dist/js/bootstrap.bundle.min.js
+    target: assets/js/bootstrap.bundle.min.js
